# cursor-optimizer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  biome.json  deny.toml  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: baseline.mdc
.github/: copilot-instructions.md
.github/workflows/: build.yml
artifacts/: .gitkeep
crates/application-paths/: Cargo.toml
crates/application-paths/sources/: library.rs
crates/curator/: Cargo.toml
crates/curator/sources/: cleanup.rs  library.rs  overview.rs  paths.rs  process.rs  tools.rs
crates/packager/: Cargo.toml
crates/packager/sources/: main.rs
crates/tiny-json/: Cargo.toml
crates/tiny-json/sources/: library.rs
libraries/design-system/: package.json
libraries/design-system/sources/: animations.css  tokens.css
libraries/user-interface/: package.json  tsconfig.json
libraries/user-interface/sources/: index.ts  ipc.ts  types.ts
libraries/user-interface/sources/components/: FileBrowserField.tsx  GhostButton.tsx  PrimaryButton.tsx  TitleBar.tsx
