[package]
name = "packager"
description = "Build pipeline: bundle, compile, ship."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "packager"
path = "sources/main.rs"

[lints]
workspace = true
